--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
           <em>ACL 2020</em><br>
           [<a href="https://arxiv.org/abs/2005.02324">arXiv</a>]
           [<a href="https://github.com/chaojiang06/wiki-auto">data/code</a>]
+          [<a href="https://chaojiang06.github.io/files/ACL2020_alignment_slide_v10.pdf">slide</a>]
+          [<a href="https://youtu.be/xgYYlO8jkVc">video on Youtube</a>]
           </li>
           
           
