--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul class="pub">
           
-          <li><a href="https://arxiv.org/abs/2005.02324.pdf">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
+          <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
           <b>Chao Jiang</b>, Mounica Maddela, Wuwei Lan, Yang Zhong, Wei Xu<br>
           <em>ACL 2020</em><br>
           [<a href="https://arxiv.org/abs/2005.02324">arXiv</a>]
