--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
 
       <footer>
-        <p><small>Last updated on Dec. 18, 2019.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
+        <p><small>Last updated on June 25, 2020.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
