--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 id="news">What's new?</h2>
         <ul>
             <li>We are releasing the complete version of Wiki-Auto dataset.</li>
-            <li>We are releasing the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
+            <li>We released the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
         </ul>
         <br>
         
@@ -163,7 +163,7 @@
       </section>
 
       <footer>
-        <p><small>Last updated on June 25, 2020.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
+        <p><small>Last updated on July 26, 2020.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
