--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- <p><img src="img/myself-band.jpg"></img></p> -->
 
-        <p>I am a third-year PhD student at <a href="https://cse.osu.edu/">Computer Science and Engineering</a> department of <a href="https://www.osu.edu/">The Ohio State University</a>. I am fortunate to work with my advisor Professor <a href="https://cocoxu.github.io/">Wei Xu</a>. Before that, I obtained my M.S. degree in Computer Science from <a href="https://www.virginia.edu/">University of Virginia</a> and my B.S. degree from the School of Electrical and Information Engineering at <a href="http://www.tju.edu.cn/english/index.htm">Tianjin University</a>.</p>
+        <p>I am a third-year PhD student in Computer Science at <a href="https://www.ic.gatech.edu/">School of Interactive Computing</a> of <a href="https://www.gatech.edu/">Georgia Institute of Technology</a>. I am fortunate to work with my advisor Professor <a href="https://cocoxu.github.io/">Wei Xu</a>. Before that, I obtained my M.S. degree in Computer Science from <a href="https://www.virginia.edu/">University of Virginia</a> and my B.S. degree from the School of Electrical and Information Engineering at <a href="http://www.tju.edu.cn/english/index.htm">Tianjin University</a>.</p>
         <p>I mainly work on Natural Language Processing (NLP). I am interested in semantic understanding and crowd-sourcing annotation. Previously, I also did some research on representation learning for NLP with Professor <a href="http://kwchang.net/">Kai-Wei Chang</a>.</p>
 
         <br>
@@ -85,11 +85,19 @@
         <h2 id="edu">Education</h2>
 
         <ul>
+            <li> <a href="https://www.gatech.edu/">Georgia Institute of Technology</a>
+            <br>
+            <b> Ph.D. in Computer Science</b> 
+            <br>
+            <em>Aug. 2020 -- Present</em>
+            </li>
+          
+          
             <li> <a href="https://www.osu.edu/">The Ohio State University</a>
             <br>
             <b> Ph.D. in Computer Science and Engineering </b> 
             <br>
-            <em>Aug. 2018 -- Present</em>
+            <em>Aug. 2018 -- Aug. 2020</em>
             </li>
 
             <li> <a href="https://www.virginia.edu/">University of Virginia</a> 
