--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Chao Jiang's Homepage</title>
-
+    <link rel="icon" href="https://chaojiang06.github.io/files/bitbug_favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://chaojiang06.github.io/files/bitbug_favicon.ico" type="image/x-icon">
+    
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
