--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <h1>Chao Jiang</h1>
         <h1>(姜超)</h1>
         <ul>
+          <li><a href="https://chaojiang06.github.io/files/cv.pdf">Resume</a></li>
           <li><a href="https://github.com/chaojiang06">Github</a></li>
           <li><a href="https://scholar.google.com/citations?user=UIjpQIAAAAAJ&hl=en">Google Scholar</a></li>
-          <li><a href="https://chaojiang06.github.io/files/cv.pdf">Resume</a></li>
+          <li><a href="https://www.semanticscholar.org/author/Chao-Jiang/145755239">Semantic Scholar</a></li>
         </ul>
       </header>
       <section>
@@ -40,7 +41,7 @@
         
         <h2 id="news">What's new?</h2>
         <ul>
-            <li>We are releasing the complete version of Wiki-Auto dataset.</li>
+            <li>We released the complete version of Wiki-Auto dataset.</li>
             <li>We released the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
         </ul>
         <br>
