--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         
         <h2 id="news">What's new?</h2>
         <ul>
+            <li>I am very happy to join the <a href="https://www.iarpa.gov/index.php/research-programs/better">BETTER</a> project to develop techniques that can better extract and retrieve informationacross multiple languages and problem domains.</li>
             <li>We released the complete version of Wiki-Auto dataset.</li>
             <li>We released the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
         </ul>
