--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 
         <ul class="pub">
           
+          <li><a href="https://arxiv.org/pdf/2106.02569.pdf">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
+          Wuwei Lan<sup><b>*</b></sup>, <b>Chao Jiang</b><sup><b>*</b></sup>, Wei Xu<br>(<sup><b>*</b></sup> indicates equal contribution.)
+          <em>ACL 2021</em><br>
+          [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
+          </li>
+          
           <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
           <b>Chao Jiang</b>, Mounica Maddela, Wuwei Lan, Yang Zhong, Wei Xu<br>
           <em>ACL 2020</em><br>
