--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         <ul class="pub">
           
-          <li><a href="https://arxiv.org/pdf/2106.02569.pdf">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
-          Wuwei Lan<sup><b>*</b></sup>, <b>Chao Jiang</b><sup><b>*</b></sup>, Wei Xu<br>(<sup><b>*</b></sup> indicates equal contribution.)
+          <li><a href="https://arxiv.org/pdf/2106.02569.pdf">Neural semi-Markov CRF for Monolingual Word Alignment</a><br>
+          Wuwei Lan<sup><b>*</b></sup>, <b>Chao Jiang</b><sup><b>*</b></sup>, Wei Xu (<sup><b>*</b></sup> indicates equal contribution.)<br>
           <em>ACL 2021</em><br>
           [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
           </li>
