--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           Wuwei Lan<sup><b>*</b></sup>, <b>Chao Jiang</b><sup><b>*</b></sup>, Wei Xu (<sup><b>*</b></sup> indicates equal contribution.)<br>
           <em>ACL 2021</em><br>
           [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
+          [<a href="https://github.com/chaojiang06/neural-Jacana">data/code</a>]
           </li>
           
           <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
