--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <h2 id="news">What's new?</h2>
         <ul>
-            <li>I am very excited to join the <a href="https://www.iarpa.gov/index.php/research-programs/better">BETTER</a> project with researchers from Brown University and University of Pennsylvania to develop techniques that can better extract and retrieve information across multiple languages and problem domains.</li>
+            <li>A long paper for monolingual word alignment is accepted at ACL2021, we propose an elegant solution, neural semi-markov CRF model, to handle the spans in both source and target sentences.</li> 
             <li>We released the complete version of Wiki-Auto dataset.</li>
             <li>We released the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
         </ul>
