--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <h2 id="news">What's new?</h2>
         <ul>
-            <li>A long paper for monolingual word alignment is accepted at ACL2021, we propose an elegant solution, neural semi-markov CRF model, to handle the spans in both source and target sentences.</li> 
+            <li>A long paper for <a href="https://arxiv.org/pdf/2106.02569.pdf">monolingual word alignment</a> is accepted at ACL2021. We propose an elegant solution, neural semi-markov CRF model, to handle the spans in both source and target sentences.</li> 
             <li>We released the complete version of Wiki-Auto dataset.</li>
             <li>We released the checkpoints of BERT model fine-tuned on the Newsela-Manual and Wiki-Manual datasets.</li>
         </ul>
