--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           <em>ACL 2021</em><br>
           [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
           [<a href="https://github.com/chaojiang06/neural-Jacana">data/code</a>]
+          [<a href="https://chaojiang06.github.io/files/semi-crf-slides.pdf">slide</a>]
+          [<a href="https://youtu.be/TiWJ5VWWoV0">video on Youtube</a>]
           </li>
           
           <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
