--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul class="pub">
           
           <li><a href="https://arxiv.org/pdf/2106.02569.pdf">Neural semi-Markov CRF for Monolingual Word Alignment</a><br>
-          Wuwei Lan<sup><b>*</b></sup>, <b>Chao Jiang</b><sup><b>*</b></sup>, Wei Xu (<b>*</b> indicates equal contribution.)<br>
+          Wuwei Lan<b>*</b>, <b>Chao Jiang</b><b>*</b>, Wei Xu (<b>*</b> indicates equal contribution.)<br>
           <em>ACL 2021</em><br>
           [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
           [<a href="https://github.com/chaojiang06/neural-Jacana">data/code</a>]
