--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           
           <li><a href="https://arxiv.org/pdf/2106.02569.pdf">Neural semi-Markov CRF for Monolingual Word Alignment</a><br>
           Wuwei Lan<b>*</b>, <b>Chao Jiang</b><b>*</b>, Wei Xu (<b>*</b> indicates equal contribution.)<br>
-          <em>ACL 2021</em><br>
+          <em>ACL 2021</em><br> <b>(Oral Presentation)</b><br>
           [<a href="https://arxiv.org/pdf/2106.02569.pdf">arXiv</a>]
           [<a href="https://github.com/chaojiang06/neural-Jacana">data/code</a>]
           [<a href="https://chaojiang06.github.io/files/semi-crf-slides.pdf">slides</a>]
