--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="files/1_photo.JPG" alt="alt qtext" width="170px" height="220.35px" />
+        <img src="files/IMG_0480.JPG" alt="alt qtext" width="200px" height="200px" />
         <h1>Chao Jiang</h1>
         <h1>(姜超)</h1>
         <ul>
