--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="files/IMG_0480.JPG"  width="200px" height="150px" />
+        <img src="files/IMG_0480.JPG".  alt="alt qtext" width="200px" height="150px"/>
         <h1>Chao Jiang</h1>
         <h1>(姜超)</h1>
         <ul>
