--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <ul class="pub">
           
-          <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
+          <li><a href="https://arxiv.org/abs/2005.02324">arXivEdits: Understanding the Human Revision Process in Scientific Writing</a><br>
           <b>Chao Jiang</b>, Wei Xu, Samuel Stevens<br>
           <em>EMNLP 2022</em><br>
           [<a href="https://arxiv.org/abs/2005.02324">arXiv</a>]
@@ -61,7 +61,7 @@
           [<a href="https://youtu.be/xgYYlO8jkVc">video on Youtube</a>] -->
           </li>
           
-          <li><a href="https://www.aclweb.org/anthology/2020.acl-main.709/">Neural CRF Model for Sentence Alignment in Text Simplification</a><br>
+          <li><a href="https://arxiv.org/abs/2210.03235">Improving Large-scale Paraphrase Acquisition and Generation</a><br>
           Yao Dou, <b>Chao Jiang</b>, Wei Xu<br>
           <em>EMNLP 2022</em><br>
           [<a href="https://arxiv.org/abs/2210.03235">arXiv</a>]
