--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
         <ul class="pub">
           
-          <li><a href="https://arxiv.org/abs/2005.02324">arXivEdits: Understanding the Human Revision Process in Scientific Writing</a><br>
+          <li><a href="http://arxiv.org/abs/2210.15067">arXivEdits: Understanding the Human Revision Process in Scientific Writing</a><br>
           <b>Chao Jiang</b>, Wei Xu, Samuel Stevens<br>
           <em>EMNLP 2022</em><br>
-          [<a href="https://arxiv.org/abs/2005.02324">arXiv</a>]
+          [<a href="http://arxiv.org/abs/2210.15067">arXiv</a>]
 <!--           [<a href="https://github.com/chaojiang06/wiki-auto">data/code</a>]
           [<a href="https://chaojiang06.github.io/files/ACL2020_alignment_slide_v10.pdf">slides</a>]
           [<a href="https://youtu.be/xgYYlO8jkVc">video on Youtube</a>] -->
