--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
           <b>Chao Jiang</b>, Wei Xu, Samuel Stevens<br>
           <em>EMNLP 2022</em><br>
           [<a href="http://arxiv.org/abs/2210.15067">arXiv</a>]
-<!--           [<a href="https://github.com/chaojiang06/wiki-auto">data/code</a>]
-          [<a href="https://chaojiang06.github.io/files/ACL2020_alignment_slide_v10.pdf">slides</a>]
-          [<a href="https://youtu.be/xgYYlO8jkVc">video on Youtube</a>] -->
+          [<a href="https://github.com/chaojiang06/arXivEdits">data</a>]
+          [<a href="https://chaojiang06.github.io/files/arxiv-edits-poster.pdf">poster</a>]
+          [<a href="https://chaojiang06.github.io/files/arxiv-slides-short.pdf">short slides</a>]
+          [<a href="https://chaojiang06.github.io/files/arxiv-slides-full.pdf">long slides</a>]
+          [<a href="https://youtu.be/rhKhtT-ChyI">3-minute video on Youtube</a>]
           </li>
           
           <li><a href="https://arxiv.org/abs/2210.03235">Improving Large-scale Paraphrase Acquisition and Generation</a><br>
