--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           [<a href="https://chaojiang06.github.io/files/arxiv-edits-poster.pdf">poster</a>]
           [<a href="https://chaojiang06.github.io/files/arxiv-slides-short.pdf">short slides</a>]
           [<a href="https://chaojiang06.github.io/files/arxiv-slides-full.pdf">long slides</a>]
-          [<a href="https://youtu.be/rhKhtT-ChyI">3-minute video on Youtube</a>]
+          [<a href="https://youtu.be/ivFAAPIQtCQ">3-minute video on Youtube</a>]
           </li>
           
           <li><a href="https://arxiv.org/abs/2210.03235">Improving Large-scale Paraphrase Acquisition and Generation</a><br>
