--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </section>
 
       <footer>
-        <p><small>Last updated on June 6, 2021.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
+        <p><small>Last updated on 12/18/2022.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
