--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="https://github.com/chaojiang06">Github</a></li>
           <li><a href="https://scholar.google.com/citations?user=UIjpQIAAAAAJ&hl=en">Google Scholar</a></li>
           <li><a href="https://www.semanticscholar.org/author/Chao-Jiang/145755239">Semantic Scholar</a></li>
+          <li><a href="https://chaojiang06.github.io/files/UVa_transcript.pdf">Transcript at UVa</a></li>
         </ul>
       </header>
       <section>
