--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Chao Jiang</h1>
         <h1>(姜超)</h1>
         <ul>
-          <li><a href="https://chaojiang06.github.io/files/cv.pdf">Resume</a></li>
+          <li><a href="https://chaojiang06.github.io/files/Chao_Jiang_CV_personal_page.pdf">Resume</a></li>
           <li><a href="https://github.com/chaojiang06">Github</a></li>
           <li><a href="https://scholar.google.com/citations?user=UIjpQIAAAAAJ&hl=en">Google Scholar</a></li>
           <li><a href="https://www.semanticscholar.org/author/Chao-Jiang/145755239">Semantic Scholar</a></li>
@@ -42,6 +42,7 @@
         
         <h2 id="news">What's new?</h2>
         <ul>
+            <li>One paper is accepted at Fingings of ACL 2023. Big thanks to my co-authors and our advisors!</li> 
             <li>Two papers are accepted at EMNLP2022. Big thanks to my co-authors and my advisor!</li> 
             <li>A long paper for <a href="https://arxiv.org/pdf/2106.02569.pdf">monolingual word alignment</a> is accepted at ACL2021.</li> 
             <li>We released the complete version of Wiki-Auto dataset.</li>
@@ -243,7 +244,7 @@
       </section>
 
       <footer>
-        <p><small>Last updated on May 2, 2023.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
+        <p><small>Last updated on June 19, 2023.<br />Theme: <a href="https://github.com/orderedlist/minimal">minimal</a>.</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
