--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Chao Jiang</h1>
         <h1>(姜超)</h1>
         <ul>
-          <li><a href="https://chaojiang06.github.io/files/Chao_Jiang_one_page_CV (7).pdf">Resume</a></li>
+          <li><a href="https://chaojiang06.github.io/files/Chao_Jiang_one_page_CV.pdf">Resume</a></li>
           <li><a href="https://github.com/chaojiang06">Github</a></li>
           <li><a href="https://scholar.google.com/citations?user=UIjpQIAAAAAJ&hl=en">Google Scholar</a></li>
           <li><a href="https://www.semanticscholar.org/author/Chao-Jiang/145755239">Semantic Scholar</a></li>
